quick fix for padding for nav on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -75,7 +75,7 @@
         height: 100vh;
         top: 0;
         left: -30vw;
-        padding-top: 5vh;
+        padding-top: 48px;
         display: block;
         position: fixed;
         z-index: 2;
